# portfolio-app

./: Cargo.toml  index.html  index.scss  package-lock.json  package.json
assets/images/cookieclicker/: reesespuffs.psd  sugar cookie.psd
src/: app_router.rs  main.rs
src/pages/: contact.rs  credits.rs  gear.rs  home.rs  me.rs  minigame.rs  mod.rs  software.rs  testpage.rs
