[package]
name = "portfolio-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2"
stdweb = "0.4.20"

[dependencies.web-sys]
version = "0.3"

features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]